@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2015 the original author or authors.
+ * Copyright 2012-2016 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -25,10 +25,7 @@ import org.junit.Test;
 
 import org.springframework.boot.actuate.metrics.Metric;
 
-import static org.hamcrest.Matchers.equalTo;
-import static org.hamcrest.Matchers.is;
-import static org.hamcrest.Matchers.nullValue;
-import static org.junit.Assert.assertThat;
+import static org.assertj.core.api.Assertions.assertThat;
 
 /**
  * Tests for {@link MetricRegistryMetricReader}.
@@ -52,9 +49,9 @@ public class MetricRegistryMetricReaderTests {
 			}
 
 		});
-		assertThat(this.metricReader.findOne("test"), is(nullValue()));
+		assertThat(this.metricReader.findOne("test")).isNull();
 		this.metricRegistry.remove("test");
-		assertThat(this.metricReader.findOne("test"), is(nullValue()));
+		assertThat(this.metricReader.findOne("test")).isNull();
 	}
 
 	@Test
@@ -64,14 +61,14 @@ public class MetricRegistryMetricReaderTests {
 
 			@Override
 			public Number getValue() {
-				return new Integer(5);
+				return Integer.valueOf(5);
 			}
 
 		});
 		Metric<Integer> metric = (Metric<Integer>) this.metricReader.findOne("test");
-		assertThat(metric.getValue(), equalTo(new Integer(5)));
+		assertThat(metric.getValue()).isEqualTo(Integer.valueOf(5));
 		this.metricRegistry.remove("test");
-		assertThat(this.metricReader.findOne("test"), is(nullValue()));
+		assertThat(this.metricReader.findOne("test")).isNull();
 	}
 
 }
